# cpet-safety-line-stage1

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: base.yaml  paths.yaml
configs/bridge/: anchor_rules_v1.yaml  bridge_sampling_priority_v0.yaml  contract_rules_v1.yaml  home_proxy_map_v0.yaml  sensor_schema_v0.yaml
configs/data/: concordance_config.yaml  field_map_v1.yaml  field_map_v2.yaml  label_rules_v1.yaml  label_rules_v2.yaml  label_rules_v3.yaml  qc_rules_v1.yaml  reference_rules_v1.yaml  reference_rules_v2.yaml  reference_spec_stage1b.yaml  schema_v1.yaml  schema_v2.yaml  split_rules_v1.yaml  variable_roles_stage1b.yaml  zone_rules_stage1b.yaml
configs/features/: feature_config_v1.yaml  feature_config_v2.yaml
configs/model/: multitask_proxy.yaml  ordinal_zone.yaml  outcome_lgbm.yaml  p0_lasso.yaml  p0_xgb.yaml  p1_catboost.yaml  p1_catboost_cost_sensitive.yaml  (+3 more)
data/: README.md
docs/: DEVLOG.md  PLANNING.md  chatgpt_consultation_prompt.md  chatgpt_consultation_prompt_v2.md  chatgpt_consultation_prompt_v3.md
notebooks/: 00_data_exploration.ipynb  01_qc_review.ipynb  02_cohort_description.ipynb  03_label_inspection.ipynb  04_feature_analysis.ipynb  05_model_p0.ipynb  06_model_p1.ipynb  07_anchor_export.ipynb  99_sandbox.ipynb
paper/: Makefile  main_cn.bbl  main_cn.tex  main_en.bbl  main_en.tex  references.bib  supplementary.tex
reports/: anomaly_audit_report.md  confidence_report.md  data_audit_full.md  eih_logistic_report.md  instability_report.md  legacy_baseline_manifest.json  outcome_anchor_report.md  outcome_model_report.md  p0_model_report.md  p0_model_report_v2.md  p1_ablation_report.md  p1_model_report.md  p1_model_report_cost_sensitive.md  p1_model_report_v2.md  phenotype_burden_report.md  posthoc_report.md  qc_report.md  reference_equation_v2.md  reference_equations.md  reference_quantiles_report.md  sensitivity_analysis_report.md  sensitivity_protocol.md  stage1b_summary_report.md  stratified_validation_report.md  subgroup_report.md  table1.csv  table1.md  twobytwo.md  zone_report.md
tests/: test_anchors.py  test_anomaly_score.py  test_bridge_prep.py  test_cohort.py  test_concordance.py  test_contracts.py  test_evaluate.py  test_features.py  test_interpret.py  test_io.py  test_labels.py  test_modeling_p0.py  test_modeling_p1.py  test_outcome_model.py  test_phase_a.py  test_phase_f.py  test_qc.py  test_reporting.py  test_sensitivity.py  test_smoke_pipeline.py  test_splitter.py  test_stats.py  test_stratified_validation.py
(+117 files in other folders)
